use jvm g1gc